<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_math"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_math"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/action_plus"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_plus"
                android:visible="true"/>
            <item
                android:id="@+id/action_minus"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_minus"
                android:visible="true"/>
            <item
                android:id="@+id/action_multiply"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_multiply"
                android:visible="true"/>
            <item
                android:id="@+id/action_divide"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_divide"
                android:visible="true"/>
            <item
                android:id="@+id/action_modulo"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_modulo"
                android:visible="true"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_comparison"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_comparison"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/action_greater_than"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_greater_than"
                android:visible="true"/>
            <item
                android:id="@+id/action_greater_than_equals"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_greater_than_equals"
                android:visible="true"/>
            <item
                android:id="@+id/action_equals"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_equals"
                android:visible="true"/>
            <item
                android:id="@+id/action_not_equals"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_not_equals"
                android:visible="true"/>
            <item
                android:id="@+id/action_less_than_equals"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_less_than_equals"
                android:visible="true"/>
            <item
                android:id="@+id/action_less_than"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_less_than"
                android:visible="true"/>
            <item
                android:id="@+id/action_contains"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_contains"
                android:visible="true"/>
            <item
                android:id="@+id/action_regex"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_regex"
                android:visible="true"/>
        </menu>
    </item>

</menu>